# EvoDiffusion

./: README.md  pyproject.toml
evo_diffusion/: cond_unet.py  diffusion.py  edit_based_diffusion.py  lyra.py  million_experts.py  model_components.py  rgb.py  synthetic_sequences.py  torch_components.py  training.py
evo_diffusion/masked_diffusion_conditional.py/: README.md  losses.py  model.py  train.py
notebooks/: EditBasedDiffusionTest.ipynb  Gaussian_Mixture_2D.ipynb  MixtureOfMutations.ipynb  SyntheticSequences.ipynb
script/: gaussian_mixture_2d.py
time_conditioned_esm/: Time-Conditioned Masked Language Modeling.ipynb
