[tool.poetry]
name = "evo_diffusion"
version = "0.1.0"
description = ""
authors = ["marlinfiggins <marlinfiggins@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
jax = "^0.4.26"
jaxlib = "^0.4.26"
flax = "^0.8.2"
pandas = "^2.2.1"
optax = "^0.2.2"
orbax = "^0.1.9"


[tool.poetry.group.dev.dependencies]
notebook = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
